gl33-master/src/test/deca/syntax/invalid/others/parentheseEnPlusIfMethode2.deca
/*
Test sur l'ajout de plusieurs parenthèse au début de if dans une fonction

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

class MyClass{
  boolean a = true;

  int myFunc(){
    if ((a){
      print("hello");
    }
    return 1;
  }
}

{

}
